--- a/NewCandySearch/LaunchScreen.storyboard
+++ b/NewCandySearch/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,14 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Candy Search" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="4HL-S2-eVf">
-                                <rect key="frame" x="0.0" y="202" width="375" height="43"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2017 Ray Wenderlich. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="UQx-DL-qay">
-                                <rect key="frame" x="0.0" y="646" width="374" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="UQx-DL-qay">
+                                <rect key="frame" x="0.0" y="667" width="374" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -35,10 +28,7 @@
                         <constraints>
                             <constraint firstItem="UQx-DL-qay" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0kS-b0-1Ut"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="UQx-DL-qay" secondAttribute="bottom" id="4es-zd-gvs"/>
-                            <constraint firstItem="4HL-S2-eVf" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="MWo-a5-vcE"/>
-                            <constraint firstItem="4HL-S2-eVf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="QLc-Ur-RAY"/>
                             <constraint firstItem="UQx-DL-qay" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="W5D-hU-v36"/>
-                            <constraint firstItem="4HL-S2-eVf" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="bottom" multiplier="0.33333" constant="1" id="veY-1S-tpW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
